--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;400;600;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div class="container">
+            <div class="main-section">
+                <h1 class="heading">Metric/Imperial Unit Conversion</h1>
+                <div class="rectangle">
+                    <input type="text" id="number" class="number-field" placeholder="0">
+                </div>
+        
+                <button id="convert-btn" class="convert-btn">convert</button>
+            </div>
+            <div class="values">
+                <div id="lengh" class="values-box">
+                    <h3>Length (Meter/Feet)</h3>
+                    <p class="value-text"></p>
+                </div>
+                <div id="volume" class="values-box">
+                    <h3>Volume (Liters/Gallons)</h3>
+                    <p></p>
+                </div>
+                <div id="mass" class="values-box">
+                    <h3>Mass (Kilograms/Pounds)</h3>
+                    <p></p>
+                </div>
+            </div>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
