Add event listener to button in javascript  file.
Add function to convert length values, and call function using event listener added to the convert button.

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
             <div class="main-section">
                 <h1 class="heading">Metric/Imperial Unit Conversion</h1>
                 <div class="rectangle">
-                    <input type="text" id="number" class="number-field" placeholder="0">
+                    <input type="text" id="input" class="number-field" placeholder="0">
                 </div>
         
                 <button id="convert-btn" class="convert-btn">convert</button>
             </div>
             <div class="values">
-                <div id="lengh" class="values-box">
+                <div class="values-box">
                     <h3>Length (Meter/Feet)</h3>
-                    <p class="value-text"></p>
+                    <p id="length"></p>
                 </div>
-                <div id="volume" class="values-box">
+                <div class="values-box">
                     <h3>Volume (Liters/Gallons)</h3>
-                    <p></p>
+                    <p id="volume"></p>
                 </div>
-                <div id="mass" class="values-box">
+                <div class="values-box">
                     <h3>Mass (Kilograms/Pounds)</h3>
-                    <p></p>
+                    <p id="mass"></p>
                 </div>
             </div>
         </div>
